# demo-app

Cooking/: .env.example  README.md  ROADMAP.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
Cooking/frontend/: .env.example  index.html
Cooking/frontend/src/: App.css  App.jsx  config.js
RecipickContext/: get-youtube-api.py  wip___convert.py
RecipickContext/transcripts/: full_transcript_f_tQoDbJO98.txt
RunPattern/: .gitignore  app.py  app_worst.py
RunPattern/data/: Activities_2022-11-25_2026-03-01.csv  ott-20260223.csv
courseMap/: convert-csv-to-light.py  convert-gpx-to-csv.py  convert-json-to-jpx.py  runtrip_course_route_38864.json
daniels-formula/: .gitignore  README.md  ROADMAP.md  pyproject.toml  races.json  requirements.txt
daniels-formula/data/: Activities_2026-03-01-now.csv  phase_characteristics.json  phase_priority.json  training_schedule_rules.json  user_stats.json  vdot_table.csv
daniels-formula/docs/: DANIELS_FORMULA_SPEC.md
daniels-formula/src/: daniels_engine.py  main.py  pyproject.toml  requirements.txt
youtube-app/: Dockerfile  main.py
