[project]
name = "cooking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.3.0",
    "pandas>=3.0.1",
    "cachetools>=5.5.0",
    "requests>=2.32.0",
    "dotenv>=0.9.9",
    "sentence-transformers>=3.4.1",
    "torch>=2.5.1",
]

# uvを使う場合、CPU版のインデックスを教えてあげる必要があります
# ここから下を追加
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
