[project]
name = "daniels-formula"
version = "0.1.0"
description = "Jack Daniels' VDOT based running training menu generator"
authors = [
    { name = "Mariko Shozawa", email = "mariko.shozawa@example.com" }
]
[tool.hatch.build.targets.wheel]
packages = ["src"]

dependencies = [
    "pandas>=2.0.0",       # VDOT表（CSV）の操作用
    "pydantic>=2.0.0",     # データバリデーション（Time型やMenu型）
    "tabulate>=0.9.0",     # CLIでメニューを綺麗に表示するため
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",       # テスト用
    "black>=23.0.0",       # フォーマッタ
    "isort>=5.12.0",       # インポート順の整理
    "mypy>=1.0.0",         # 型チェック（Goエンジニアには必須級）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
